# majestic-refactored

./: .gitignore  Cargo.toml  Jenkinsfile  build.rs  build_web.sh  log_config.yml  logcfg.yml  sonar-project.properties
.github/workflows/: tests.yml
examples/: .majestic_history  metacircular.maj  prolog.maj  word-equation-scheme.maj
misc/web/: go.mod  index.html  main.go  main.wasm  majestic.js  majestic_bg.wasm  serve.go
src/: lib.rs  main.rs
src/parser/: combinators.rs  convert.rs  expression.rs  mod.rs  test.rs
src/parser/test/: mod.rs
src/printer/: mod.rs  test.rs
src/vm/: atoms.rs  constants.rs  environment.rs  error.rs  evaluate.rs  general.rs  lists.rs  mod.rs  primitive_eval.rs  stack.rs  types.rs  vm.rs
src/vm/test/: atoms.rs  mod.rs  stack.rs
tests/: integration_test.rs
tests/ast/: mod.rs
tests/printer/: mod.rs
tests/util/: mod.rs
