[package]
name = "majestic-refactored"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[lib]
name = "majestic"
path = "src/lib.rs"

[[bin]]
name = "majestic"
path = "src/bin/majestic.rs"

[build-dependencies]
chrono = "0.4.23"

[dependencies]
ariadne = "0.1.5"
chumsky = "0.8.0"
colored = "2.0.0"
comfy-table = "6.1.4"
float-cmp = "0.9.0"
log = "0.4.17"
log4rs = "1.2.0"
rustyline = "10.1.1"
rustyline-derive = "0.7.0"

[dev-dependencies]
regex = "1.8.1"
rand = "0.8.5"
